--- a/src/style/AboutMeStyle.css
+++ b/src/style/AboutMeStyle.css
@@ -97,7 +97,7 @@
 .tooltip .tooltiptext::after {
     content: "";
     position: absolute;
-    top: -15%;
+    top: -20%;
     left: 44%;
     rotate: 90deg;
     margin-top: -5px;
@@ -179,7 +179,7 @@
     align-items: center;
     float:right;
     margin-right: 22%;
-    margin-top: 96%;
+    margin-top: 90%;
 }
   
 .quick-btn {
@@ -191,7 +191,7 @@
     border-radius: 10px;
     box-shadow: 0px 10px 10px rgba(0,0,0,0.1);
     background: white;
-    /* margin-left: 50px; */
+    margin-left: 50px;
     margin: 60px -50px 10px 60px;
     transition: 0.3s;
     justify-content: center;
