--- a/src/style/AboutMeStyle.css
+++ b/src/style/AboutMeStyle.css
@@ -119,7 +119,8 @@
     margin-left: 8%;
     height: 254px;
     border-radius: 20px;
-    background: #f5f5f5;
+    /* background: #f5f5f5; */
+    background-color: rgba(65, 105, 225,0.05);
     position: relative;
     padding: 1.8rem;
     border: 2px solid #c3c6ce;
