--- a/src/style/ChatStyle.css
+++ b/src/style/ChatStyle.css
@@ -103,18 +103,30 @@ body {
 .message-list {
   flex-grow: 1;
   overflow-y: scroll;
+  word-break: break-all;
+  overflow-x: auto;
   /* padding: 10px; */
 }
 
 .message-item {
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   margin-left: 10px;
 }
 .message-item .user-name {
   font-weight: bold;
+  font-size: large;
+  font-family: 'Courier New', Courier, monospace;
+  border: #007bff 2px solid;
+  border-radius: 30px;
+  padding: 2px 10px;
+}
+.message-item .user-name::after {
+  content: ":";
 }
 .message-item .message-text {
-  margin-left: 10px;
+  margin-left: 6px;
+  line-height: 1.3em;
+  font-size: 1.1em;
 }
 
 /* input */
@@ -148,3 +160,78 @@ body {
   color: #fff;
   cursor: pointer;
 }
+
+
+/* username input */
+.wave-group {
+  position: relative;
+}
+
+.wave-group .input {
+  font-size: 16px;
+  padding: 10px 10px 10px 5px;
+  display: block;
+  width: 200px;
+  border: none;
+  border-bottom: 1px solid #515151;
+  background: transparent;
+}
+
+.wave-group .input:focus {
+  outline: none;
+}
+
+.wave-group .label {
+  color: #999;
+  font-size: 18px;
+  font-weight: normal;
+  position: absolute;
+  pointer-events: none;
+  left: 5px;
+  top: 10px;
+  display: flex;
+}
+
+.wave-group .label-char {
+  transition: 0.2s ease all;
+  transition-delay: calc(var(--index) * .05s);
+}
+
+.wave-group .input:focus ~ label .label-char,
+.wave-group .input:valid ~ label .label-char {
+  transform: translateY(-20px);
+  font-size: 14px;
+  color: #5264AE;
+}
+
+.wave-group .bar {
+  position: relative;
+  display: block;
+  width: 200px;
+}
+
+.wave-group .bar:before,.wave-group .bar:after {
+  content: '';
+  height: 2px;
+  width: 0;
+  bottom: 1px;
+  position: absolute;
+  background: #5264AE;
+  transition: 0.2s ease all;
+  -moz-transition: 0.2s ease all;
+  -webkit-transition: 0.2s ease all;
+}
+
+.wave-group .bar:before {
+  left: 50%;
+}
+
+.wave-group .bar:after {
+  right: 50%;
+}
+
+.wave-group .input:focus ~ .bar:before,
+.wave-group .input:focus ~ .bar:after {
+  width: 50%;
+}
+
