--- a/src/style/AboutMeStyle.css
+++ b/src/style/AboutMeStyle.css
@@ -2,30 +2,30 @@
     float: right;
     background: #008bf8;
     width: 20%;
-    min-width: 260px;
+    min-width: 280px;
     height: 100vh;
     position: fixed;
     right: 0;
     top: 0;
     z-index: 100;
     border-radius: 60% 0 0 20%;
-    box-shadow: 0 4px 18px 0 rgba(0, 0, 0, 0.25);
+    box-shadow: 0 4px 18px 0 rgba(0, 0, 0, 0.35);
     transition: 0.5s ease-out;
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
 .circle{
     position: absolute;
-    top: 13%;
+    top: 10%;
     left: 43%;
     border-radius: 75px;
-    /* border:1px solid red; */
     height: 120px;
     width: 120px;
 }
 .ripples{
     position: absolute;
-    top: 13.2%;
+    top: 10.2%;
     left: 43.8%;
     width: 118px;
     height: 118px;
@@ -100,8 +100,6 @@
     padding: 5px 0;
     position: absolute;
     z-index: 1;
-    /* top: 25%;
-    right: 110%; */
     top: 90%;
     right: 0%;
 }
@@ -122,8 +120,6 @@
     visibility: visible;
 }
 
-
-
 /* main cards */
 .card {
     width: 60%;
@@ -131,7 +127,6 @@
     margin-left: 8%;
     height: 254px;
     border-radius: 20px;
-    /* background: #f5f5f5; */
     background-color: rgba(65, 105, 225,0.05);
     position: relative;
     padding: 1.8rem;
@@ -141,13 +136,15 @@
     margin-bottom: 10px;
     margin-top: 20px;
 }
-.card-details {
+.card .card-details {
     color: black;
     height: 100%;
     width: 50%;
     gap: .5em;
     display: grid;
     place-content: center;
+    justify-content: left;
+    margin-left: 10%;
 }
    
 .card-button {
@@ -204,7 +201,8 @@
     font-family: 'Titillium Web', sans-serif;
     color: #333;
     border-radius: 10px;
-    box-shadow: 0px 10px 10px rgba(0,0,0,0.1);
+    /* box-shadow: rgba(0,0,0,0.1) 0px 10px 10px; */
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 20px 60px;
     background: white;
     margin-left: 50px;
     margin: 60px -50px 10px 60px;
