--- a/src/style/ChatStyle.css
+++ b/src/style/ChatStyle.css
@@ -38,7 +38,6 @@ body {
   margin-left: 0.3em;
   transition: all 0.3s ease-in-out;
 }
-
 .send-button svg {
   display: block;
   transform-origin: center center;
@@ -102,11 +101,10 @@ body {
 /* messages */
 .message-list {
   flex-grow: 1;
-  overflow-y: scroll;
+  overflow-y: auto;
   word-break: break-all;
   overflow-x: auto;
 }
-
 .message-item {
   margin-bottom: 20px;
   margin-left: 10px;
@@ -144,6 +142,7 @@ body {
 .message-right .user-name{
   float: right;
   margin-left: 6px;
+  margin-right: 16px;
 }
 .message-right .message-text{
   float:left;
@@ -259,7 +258,6 @@ body {
   border-radius: 20px;
   background-color: #e499ff;
 }
-
 .input__label {
   display: block;
   margin-left: 0.4em;
@@ -359,7 +357,7 @@ body {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.4);
-  z-index: 9998; /* 放在提示框下面 */
+  z-index: 9998; /* put under the alert window */
 }
 #msg {
   position: fixed;
@@ -377,7 +375,7 @@ body {
   font-size: large;
   font-weight: 700;
   color: #000;
-  text-align: center; /* 居中显示 */
+  text-align: center;
 }
 
 #msg #msg_clear {
@@ -399,12 +397,10 @@ body {
 /* user-list in side card */
 .user-list-box{
   height: 200px;
-  margin-top: 16%;
+  margin-top: 12%;
+  margin-bottom: 40%;
   background-color: #fff;
   border-radius: 20px;
-  /* border-right: #fff 10px solid;
-  border-top: #fff 6px solid;
-  border-bottom: #fff 6px solid; */
   overflow-x: auto;
   overflow-y: hidden;
 }
@@ -417,6 +413,9 @@ body {
   padding-bottom: 4px;
   font-weight: 700;
   font-size: 1.1em;
+}
+.user-list-box .user-head::after{
+  content: "user list";
 }
 .user-list{
   overflow-y:scroll;
