--- a/src/style/DetailStyle.css
+++ b/src/style/DetailStyle.css
@@ -54,12 +54,12 @@
 }
 .part1{
     display: block;
-    height: 300px;
+    /* height: 300px; */
 }
 .part2{
     clear: both;
     display: block;
-    height: 300px;
+    /* height: 300px; */
 }
 .text-body1{
     margin:2%;
