--- a/src/style/SideCard.css
+++ b/src/style/SideCard.css
@@ -1,3 +1,5 @@
+/* https://jigsaw.w3.org/css-validator//validator.html.zh-cn#validate_by_upload+with_options */
+/* All css code pass the w3c CSS validation */
 body {
     margin: 0;
     padding: 0;
