--- a/src/style/DetailStyle.css
+++ b/src/style/DetailStyle.css
@@ -1,5 +1,46 @@
 /* https://jigsaw.w3.org/css-validator//validator.html.zh-cn#validate_by_upload+with_options */
 /* All css code pass the w3c CSS validation */
+.spinner {
+    width: 56px;
+    height: 56px;
+    display: grid;
+    position: fixed;
+    top: 46%;
+    left: 40%;
+    transform: translate(-50%, -50%);
+
+    border: 4.5px solid #0000;
+    border-radius: 50%;
+    border-color: #dbdcef #0000;
+    animation: spinner-e04l1k 1s infinite linear;
+  }
+  
+  .spinner::before,
+  .spinner::after {
+    content: "";
+    grid-area: 1/1;
+    margin: 2.2px;
+    border: inherit;
+    border-radius: 50%;
+  }
+  
+  .spinner::before {
+    border-color: #007bff #0000;
+    animation: inherit;
+    animation-duration: 0.5s;
+    animation-direction: reverse;
+  }
+  
+  .spinner::after {
+    margin: 8.9px;
+  }
+  
+  @keyframes spinner-e04l1k {
+    100% {
+      transform: rotate(1turn);
+    }
+  }
+
 .content{
     margin-top: 40px;
     width: 60%;
