--- a/src/style/RootStyle.css
+++ b/src/style/RootStyle.css
@@ -1,5 +1,8 @@
-/* https://jigsaw.w3.org/css-validator//validator.html.zh-cn#validate_by_upload+with_options */
-/* All css code pass the w3c CSS validation */
+@charset "UTF-8";
+
+/* https://jigsaw.w3.org/css-validator/validator.html.en#validate_by_upload */
+/* All CSS code pass the W3C CSS Validation */
+
 body {
   margin: 0;
   padding: 0;
