--- a/src/style/ChatStyle.css
+++ b/src/style/ChatStyle.css
@@ -1,5 +1,7 @@
-/* https://jigsaw.w3.org/css-validator//validator.html.zh-cn#validate_by_upload+with_options */
-/* All css code pass the w3c CSS validation */
+@charset "UTF-8";
+
+/* https://jigsaw.w3.org/css-validator/validator.html.en#validate_by_upload */
+/* All CSS code pass the W3C CSS Validation */
 
 /* number of online people */
 #numUsers{
@@ -239,7 +241,7 @@
   display: flex;
   flex-direction: column;
   gap: 6px;
-  background: rgba(255, 255, 255, 0.3);
+  background: rgba(255,255,255,0.3);
   padding: 16px 16px 14px 16px;
   border-radius: 20px;
   position: relative;
@@ -255,7 +257,7 @@
   z-index: -1;
   filter: blur(25px);
   border-radius: 20px;
-  background-color: rgba(0, 123, 255,0.8);
+  background-color: rgba(0,123,255,0.8);
 }
 .input__label {
   display: block;
@@ -270,7 +272,7 @@
   font-size: 0.6em;
   font-weight: bold;
   text-align: center;
-  color: rgba(0, 0, 0, 0.5);
+  color: rgba(0,0,0,0.5);
 }
 
 .input {
@@ -310,7 +312,7 @@
   position: absolute;
   left: 50%;
   top: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%,-50%);
   height: 30px;
   width: 30px;
   background-color: #0c66ed;
@@ -355,7 +357,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgba(0,0,0,0.4);
   z-index: 9998; /* put under the alert window */
 }
 #msg {
@@ -363,11 +365,11 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  border: rgb(233, 233, 233) 3px solid;
+  border: rgb(233,233,233) 3px solid;
   border-radius: 10px;
   padding: 10px 20px;
   background-color: rgb(135,206,250);
-  box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 28px 0px, rgba(0, 0, 0, 0.1) 0px 2px 4px 0px, rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;
+  box-shadow: rgba(0,0,0,0.2) 0px 12px 28px 0px, rgba(0,0,0,0.1) 0px 2px 4px 0px, rgba(255,255,255,0.05) 0px 0px 0px 1px inset;
   z-index: 10000;
 }
 #msg #msg_cont {
@@ -378,9 +380,9 @@
 }
 
 #msg #msg_clear {
-  border: rgb(233, 233, 233) 2px solid;
+  border: rgb(233,233,233) 2px solid;
   border-radius: 5px;
-  background-color: rgba(223, 229, 232, 0.3);
+  background-color: rgba(223,229,232,0.3);
   color: #000;
   font-weight: 600;
   width: fit-content;
@@ -431,12 +433,12 @@
   font-weight: 600;
 }
 .user-list-box .me{
-  color: rgba(12, 102, 237, 0.7);
+  color: rgba(12,02,37,.7);
 }
 .user-list-box .other{
   color: #ccc;
 }
 .user-item:hover{
-  background-color: rgba(65, 105, 225,0.05);
+  background-color: rgba(65,105,225,0.05);
   transition: all 0.2s;
 }
