--- a/src/style/SideCard.css
+++ b/src/style/SideCard.css
@@ -1,5 +1,8 @@
-/* https://jigsaw.w3.org/css-validator//validator.html.zh-cn#validate_by_upload+with_options */
-/* All css code pass the w3c CSS validation */
+@charset "UTF-8";
+
+/* https://jigsaw.w3.org/css-validator/validator.html.en#validate_by_upload */
+/* All CSS code pass the W3C CSS Validation */
+
 body {
     margin: 0;
     padding: 0;
@@ -28,6 +31,7 @@ body {
     border-radius: 75px;
     height: 120px;
     width: 120px;
+    object-fit: scale-down;
 }
 .ripples{
     position: absolute;
