--- a/src/style/ChatStyle.css
+++ b/src/style/ChatStyle.css
@@ -3,7 +3,7 @@
 /* https://jigsaw.w3.org/css-validator/validator.html.en#validate_by_upload */
 /* All CSS code pass the W3C CSS Validation */
 
-/* number of online people */
+/* number of online users */
 #numUsers{
   float: right;
   margin-right: 20px;
@@ -16,11 +16,12 @@
   margin-top: 10px;
   color: #007bff;
 }
+
 /* send button */
 .send-button {
   font-family: inherit;
   font-size: 20px;
-  background: #007bff;
+  background: royalblue;
   color: white;
   padding: 0.7em 1em;
   padding-left: 0.9em;
@@ -30,12 +31,9 @@
   border-radius: 16px;
   overflow: hidden;
   transition: all 0.2s;
-  float: right;
 }
-
-.send-button span {
+.send-button .button-text {
   display: block;
-  font-size: 0.8em;
   margin-left: 0.3em;
   transition: all 0.3s ease-in-out;
 }
@@ -44,19 +42,15 @@
   transform-origin: center center;
   transition: transform 0.3s ease-in-out;
 }
-
 .send-button:hover .svg-wrapper {
   animation: fly 0.6s ease-in-out infinite alternate;
 }
-
 .send-button:hover svg {
   transform: translateX(1.2em) rotate(45deg) scale(1.1);
 }
-
-.send-button:hover span {
+.send-button:hover .button-text {
   transform: translateX(5em);
 }
-
 .send-button:active {
   transform: scale(0.95);
 }
@@ -74,7 +68,7 @@
 /* beautify the scrollbar */
 /* this code will cause a warning in w3c CSS validation, so even though it really make my scrollbar beautiful, I can not use it*/
 /* ::-webkit-scrollbar {
-  width: 6px;
+  width: 8px;
 }
 ::-webkit-scrollbar-track {
   border-radius: 10px;
@@ -111,7 +105,6 @@
   margin-left: 10px;
   display: block;
 }
-
 .message-left {
   float: left;
   clear: both;
@@ -127,12 +120,15 @@
 .message-item .user-name {
   font-weight: bold;
   font-size: large;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: 'Courier New', Courier, Youyuan;
   border: #007bff 2px solid;
   border-radius: 30px;
   padding: 2px 10px;
   width: fit-content;
+  display: flex;
+  align-items: center;
 }
+
 /* add ":" to username */
 .message-left .user-name::after {
   content: ":";
@@ -161,6 +157,7 @@
   line-height: 1.3em;
   font-size: 1.1em;
 }
+
 /* joined and left */
 .joined-text {
   text-align: center;
@@ -246,7 +243,6 @@
   border-radius: 20px;
   position: relative;
 }
-
 .input__container::before {
   content: "";
   position: absolute;
@@ -267,14 +263,12 @@
   font-size: 0.9em;
   font-weight: bold;
 }
-
 .input__description {
   font-size: 0.6em;
   font-weight: bold;
   text-align: center;
   color: rgba(0,0,0,0.5);
 }
-
 .input {
   border: none;
   outline: none;
@@ -286,7 +280,6 @@
   background: #fff;
   transition: background 300ms, color 300ms;
 }
-
 .input:hover,.input:focus {
   background: rgb(0, 0, 0);
   color: #fff;
@@ -307,7 +300,6 @@
   width: 40%;
   margin: 4px auto 0 auto;
 }
-
 .submit-button span:not(:nth-child(6)) {
   position: absolute;
   left: 50%;
@@ -350,7 +342,7 @@
   transition: 1.5s ease;
 }
   
-/* alert window */
+/* The alert window */
 .overlay {
   position: fixed;
   top: 0;
@@ -358,7 +350,8 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0,0,0,0.4);
-  z-index: 9998; /* put under the alert window */
+  /* put under the alert window */
+  z-index: 9998; 
 }
 #msg {
   position: fixed;
@@ -378,7 +371,6 @@
   color: #000;
   text-align: center;
 }
-
 #msg #msg_clear {
   border: rgb(233,233,233) 2px solid;
   border-radius: 5px;
@@ -391,7 +383,7 @@
   float: right; 
 }
 #msg #msg_clear:hover{
-  background-color: rgba(0, 123, 255,0.1);
+  background-color: rgba(0,123,255,0.1);
   transition: all 0.2s;
 }
 
@@ -402,8 +394,7 @@
   margin-bottom: 40%;
   background-color: #fff;
   border-radius: 20px;
-  overflow-x: auto;
-  overflow-y: hidden;
+  overflow: hidden;
 }
 .user-list-box .user-head{
   display: flex;
@@ -428,12 +419,14 @@
   justify-content: center;
   align-items: center;
   height: 20px;
+  line-height: 20px;
   border-bottom: 1px solid #eee;
   padding-bottom: 2px;
   font-weight: 600;
+  overflow: hidden;
 }
 .user-list-box .me{
-  color: rgba(12,02,37,.7);
+  color: rgba(12,102,237,0.7);
 }
 .user-list-box .other{
   color: #ccc;
