--- a/src/style/DetailStyle.css
+++ b/src/style/DetailStyle.css
@@ -8,36 +8,22 @@
     top: 44%;
     left: 38%;
     transform: translate(-50%, -50%);
+    border-radius: 45%;
+    border: 4px solid rgba(0,123,255,0.6);
+    border-left-color: #007bff;
+    width: 36px;
+    height: 36px;
+    animation: spin 0.8s ease-in infinite;
+}
 
-    border: 4px solid rgba(0, 0, 0, .1);
-    border-left-color: transparent;
-    border-radius: 50%;
-  }
-  
-  .loader {
-    border: 4px solid rgba(0, 0, 0, .1);
-    border-left-color: transparent;
-    width: 36px;
-    height: 36px;
-  }
-  
-  .loader {
-    border: 4px solid rgba(0, 0, 0, .1);
-    border-left-color: transparent;
-    width: 36px;
-    height: 36px;
-    animation: spin89345 1s linear infinite;
-  }
-  
-  @keyframes spin89345 {
+@keyframes spin {
     0% {
-      transform: rotate(0deg);
+        transform: rotate(0deg);
     }
-  
     100% {
-      transform: rotate(360deg);
+        transform: rotate(360deg);
     }
-  }
+}
 
 .content{
     margin-top: 40px;
