--- a/src/style/DetailStyle.css
+++ b/src/style/DetailStyle.css
@@ -7,13 +7,14 @@
     position: fixed;
     top: 44%;
     left: 38%;
-    transform: translate(-50%, -50%);
-    border-radius: 45%;
-    border: 4px solid rgba(0,123,255,0.6);
-    border-left-color: #007bff;
-    width: 36px;
-    height: 36px;
-    animation: spin 0.8s ease-in infinite;
+    transform: translate(-50%,-50%);
+    border-radius: 50%;
+    border: 6px solid rgba(16,130,255,0.6);
+    border-left: solid 6px rgba(0,123,255,1);
+    border-right: solid 6px rgba(0,123,255,1);
+    width: 38px;
+    height: 38px;
+    animation: spin 1s ease-out infinite;
 }
 
 @keyframes spin {
