--- a/src/style/RootStyle.css
+++ b/src/style/RootStyle.css
@@ -19,10 +19,10 @@ body {
   font-family: "Helvetica", sans-serif;
 	color:rgba(24,117,255,0.5);
 	text-shadow:1px 3px 6px #fff,0 0 0 rgba(0, 0, 0,0.6),1px 3px 6px #fff;
-  cursor: pointer;
   z-index: -1;
 }
- .root-button {
+/* the root button */
+.root-button {
   color: #fff;
   font-size: 70px;
   font-weight: 900;
@@ -36,25 +36,19 @@ body {
   padding: 1em;
   cursor: pointer;
 }
+/* the root button hover effect */
 .root-button:hover {
   transform: rotate(1440deg);
   transition: all 16s linear;
   color: #000;
  }
-.root-button:active {
-    background: rgba(24, 117, 255,0.2);
-    box-shadow: 0px 14px 56px -11px #1875FF;
-    transition: all 4s;
-}
 
+/* the root button text */
 .title{
-  color: rgb(255, 255, 255);
   position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  font-size: 8em;
-  font-weight: 700;
   text-align: center;
   z-index: 1;
 }
@@ -75,7 +69,7 @@ body {
   background-color: rgb(118, 218, 255);
   overflow: hidden;
 }
-
+/* add two pseudo elements to create the background effect */
 .background:before,
 .background:after {
   content: "";
@@ -88,18 +82,16 @@ body {
   animation-iteration-count: infinite;
   animation-timing-function: linear;
 }
-
 .background:before {
   bottom: 15vh;
   border-radius: 45%;
-  animation-duration: 10s;
+  animation-duration: 9s;
 }
-
 .background:after {
   bottom: 12vh;
   opacity: .5;
   border-radius: 47%;
-  animation-duration: 10s;
+  animation-duration: 9s;
 }
 
 @keyframes rotate {
