--- a/src/style/ChatStyle.css
+++ b/src/style/ChatStyle.css
@@ -21,7 +21,7 @@
 .send-button {
   font-family: inherit;
   font-size: 20px;
-  background: royalblue;
+  background: #007bff;
   color: white;
   padding: 0.7em 1em;
   padding-left: 0.9em;
